<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2016. Sergio Leonardo Isasmendi
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a
  ~ copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation the
  ~ rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
  ~ sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
  ~ THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>
    <string name="app_name">Suricate Podcast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_fragment_title">Podcast List</string>
    <string name="search_fragment_title">Search Podcast</string>
    <string name="detail_fragment_title">Details</string>
    <string name="default_detail_title">Podcast Name</string>
    <string name="default_detail_date">01/01/01</string>
    <string name="default_detail_duration">00:00:00</string>
    <string name="description_header_text">DETAILS</string>
    <string name="default_description_text">No description aviable</string>
    <string name="menu_op1">Themes</string>
    <string name="menu_op2">About</string>

    <string name="about_text">
        <![CDATA[
        \n\n
        Author: Sergio Leonardo Isasmendi \n\n
        Suricate Podcast is a podcast client witch offers 26k+ episodes and 9k+ shows in a simple and
        minimalist application. Find your favorite podcast and related episodes, make your own playlist
        and enjoy!
        \n\n
        Licence: The MIT License (MIT)
        ]]>
    </string>
    <string name="themes_selection_title">Select your theme</string>
    <string name="theme_op_1">Red</string>
    <string name="theme_op_2">Blue</string>
    <string name="theme_op_3">Orange</string>
    <string name="theme_op_4">Default</string>
    <string name="toast_no_query">No result for query</string>

    <!-- Widget -->
    <string name="podcast_widget_provider">Suricate Podcast Widget</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-0664570763252260/3326522424</string>
    <string name="interstitial_full_screen">ca-app-pub-0664570763252260/3326522424</string>
    <string name="testDeviceAdsId">853DED8B285280057103C32F0E698153</string>
    <string name="widget_default_title">Podcast Name</string>
    <string name="widget_default_length">00:00</string>
    <string name="search_hint">Search podcast</string>
    <string name="cd_search_fab">goto search view button</string>
    <string name="cd_main_list">Main playlist</string>
    <string name="cd_item_list">Item list in main list</string>
    <string name="cd_widget_prev_btn">Previos button</string>
    <string name="cd_widget_play_paused_btn">Play or pause button</string>
    <string name="cd_widget_next_btn">Previous button</string>
    <string name="cd_detail_head">Thumbail, name, posted day, duration and details of a podcast</string>
    <string name="cd_about">About SuricatePodcast</string>
    <string name="cd_theme_selection_op1">Theme option Red</string>
    <string name="cd_theme_selection_op2">Theme option Blue</string>
    <string name="cd_theme_selection_op3">Theme option Orange</string>
    <string name="cd_theme_selection_default">Theme selection default</string>
    <string name="cd_add_to_main_list_fab">Add to main list button</string>
    <string name="cd_search_input">Search input</string>
    <string name="cd_search_item_list">Search item list</string>
    <string name="cd_detail_thumbail">Thumbail</string>
    <string name="cd_main_list_poster">Poster</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="item_menu_delete">Delete</string>
    <string name="item_menu_details">Show details</string>
    <string name="share_podcast">Share</string>
    <string name="share_body_text">\"Check it out this podcast :)\"</string>

</resources>
