<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2016. Sergio Leonardo Isasmendi
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a
  ~ copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation the
  ~ rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
  ~ sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
  ~ THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/search_input_margin"
        android:background="@color/color_search_background"
        android:contentDescription="@string/cd_search_input"
        android:divider="@color/colorAccent"
        android:focusable="true"
        android:queryHint="@string/search_hint"
        android:showDividers="end" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/list_item_padding_top_bottom"
        android:paddingEnd="@dimen/list_item_padding_start_end"
        android:paddingStart="@dimen/list_item_padding_start_end"
        android:paddingTop="@dimen/list_item_padding_top_bottom" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="end"
        android:layout_margin="@dimen/search_add_button_margin"
        android:contentDescription="@string/cd_add_to_main_list_fab"
        android:focusable="true"
        android:onClick="addSelectedItemsToPlaylist"
        android:src="@drawable/plus" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adBannerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer" />

</LinearLayout>